test/distributions/blockCyc/positiveBlockSize.good
positiveBlockSize.chpl:3: error: halt reached - blocksize must be positive
