test/distributions/blockCyc/positiveBlockSize.chpl
use BlockCycDist;

var d = {1..10, 1..10} dmapped new blockCycDist((1,1), (0, 0));
writeln(d);
